--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="2;url=https://t.me/+38Vxix5tNBU2YzFl">
+    <meta http-equiv="refresh" content="2;url=https://t.me/+c6hEjWt7d1VhNTA1">
     <title>급등 종목 공개 입장 후 확인!</title>
 
 <meta property="og:title" content="🔥 12월 24일, 급등주 공개!">
@@ -10,7 +10,7 @@
     <meta property="og:description" content="실시간 투자 전략과 핵심 종목 정보를 지금 바로 확인하세요. (텔레그램 이동)">
     <meta property="og:image" content="https://raw.githubusercontent.com/8q93gatz6-a11y/com/3801fd03c40b4f758bf96bf37b44aeca30cc2dbf/%EA%B5%AD%EB%82%B4.png">
     
-    <meta property="og:url" content="https://t.me/+38Vxix5tNBU2YzFl">
+    <meta property="og:url" content="https://t.me/+c6hEjWt7d1VhNTA1">
     
     <style>
         /* CSS 스타일 */
@@ -95,7 +95,7 @@
             ⏲️ 2초 후 자동 이동됩니다.
         </p>
 
-        <a href="https://t.me/+38Vxix5tNBU2YzFl" class="cta-button">
+        <a href="https://t.me/+c6hEjWt7d1VhNTA1" class="cta-button">
             🔥 실시간 정보방 입장하기
         </a>
 
